[24.10.2008]

- autofollow-Script. twitter user config in config/twitter.yml

[2008-10-13]
- starting Twitter search from last tweet upwards

[2008-10-15]
- adding a tracking for every root tweet
- adding a note for every root tweet

[2008-10-18]
- may conduct the trackings and read follow-tweets (extend notes)
- may finish a note

[2008-10-24]
- may list notes