@@ -1,7 +1,7 @@
 class SearchController < ApplicationController
   
   def tweets
-    Snotes::Twitter.do_your_job
+    Snotes::Twitter.search
     @tweets = Tweet.all(:order => 'created_at DESC', :limit => 20)
     render :action => 'search'
   end
