@@ -1,11 +1,8 @@
 class Snotes::Twitter
+  SNOTE_TAG = '@snote'
 
   class << self
-    def do_your_job
-      tweets = search(SNOTE_TAG)
-    end
-
-    def search(query)
+    def search(query=SNOTE_TAG)
       results = ::Twitter::Search.new.to(query)
       if last_tweet = Tweet.find(:first, :order => 'created_at DESC')
         results = results.since(last_tweet.twitter_id)
@@ -20,8 +17,6 @@ class Snotes::Twitter
     end
     
     def autofollow
-      logger.info("connecting with #{TWITTER_CONFIG['username']}")
-
       twitter = Twitter::Base.new(TWITTER_CONFIG['username'], TWITTER_CONFIG['password'])
 
       to_follow = twitter.followers.select {|u| !twitter.friends.map{|f| f.screen_name }.include?(u.screen_name)}
@@ -34,6 +29,10 @@ class Snotes::Twitter
           logger.error("-> didn't work, why? I don't know")
         end
       end
+    end
+    
+    def logger
+      RAILS_DEFAULT_LOGGER
     end
   end # class << self
 end
