@@ -15,3 +15,4 @@
 
 [2008-10-24]
 - may list notes
+- using @snote instead of #snote
